--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <!-- WHATSAPP ICON -->
 <div class="container w-25" class="whatsapp">
-    <a href="https://wa.me/919911587963" target="_blank"><img
+    <a (click)="openWhatsApp()" target="_blank"><img
             src="https://i.pinimg.com/originals/43/08/82/430882b2a9c08ee91f4259ba040cc577.png" class="imgIcon"></a>
 </div>
 
@@ -17,6 +17,10 @@
             src="https://images.vexels.com/media/users/3/137415/isolated/preview/0e475bb9b17b3fa4f94f31fba1635b8f-telephone-call-icon-logo.png?w=360" class="imgIconCall"></a>
 </div>
 
+
+<!-- <div style="position: fixed; top: 0px; left: 0px; height: 100vh; width: 100%; background-color: black; display: flex; justify-content: center; align-items: center;">
+    <div class="boxx" style="height: 200px; width: 200px;"></div>
+</div> -->
 
 
 
