--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="menu col-lg-4 col-md-6 col-10 mx-auto">
             <div><button class="btn py-0"
-                    style="cursor: pointer; background-color: #fceb8e; font-size: 25px; font-weight: 600;"><span
+                    style="cursor: pointer; background: linear-gradient(90deg, #a18759, #e2d798, #ded6b9); font-size: 25px; font-weight: 600;"><span
                         class="">Images</span></button></div>
             <div (click)="shift('video')"><span style="color:white; cursor: pointer;
                     font-size: 25px;
@@ -83,7 +83,7 @@
 
 
             <div><button class="btn py-0"
-                    style="cursor: pointer; background-color: #fceb8e; font-size: 25px; font-weight: 600;"><span
+                    style="cursor: pointer; background: linear-gradient(90deg, #a18759, #e2d798, #ded6b9); font-size: 25px; font-weight: 600;"><span
                         class="">Videos</span></button></div>
         </div>
 
