--- a/src/app/components/packages/packages.component.css
+++ b/src/app/components/packages/packages.component.css
@@ -1,5 +1,5 @@
 .main {
-    background: linear-gradient(90deg, #fceb8e, #f5e9a8, #f7efaf, #fceb8e);
+    background: linear-gradient(180deg, #a18759, #e2d798, #ded6b9, #fffefd, #ded6b9, #e2d798, #a18759);;
     width: 100%;
 }
 
