--- a/src/app/components/packages/packages.component.html
+++ b/src/app/components/packages/packages.component.html
@@ -83,7 +83,7 @@
             <div class="bg-white text-center mx-3 py-4 packageCompo1"
                 style="display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
                 <span style="font-size:25px; font-weight: 600;">Popular Package</span>
-                <span style="font-size:50px; font-weight: 700; color: #b9a11a; display: flex; justify-content: center;">
+                <span style="font-size:50px; font-weight: 700; color: black; display: flex; justify-content: center;">
                     <span>&#8377;</span><span>30K</span>
                 </span>
                 <hr>
@@ -255,8 +255,8 @@
         <div class="col-lg-3 col-md-3 col-12 px-2 my-4">
             <div class="text-center mx-3 py-4 packageCompo2"
                 style="background: linear-gradient(180deg, #4d4d4d, #d8d8d8, #ffff, #d8d8d8, #4d4d4d); display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
-                <span style="font-size:25px; font-weight: 600;">Silver Package</span>
-                <span style="font-size:50px; font-weight: 700; color: #b9a11a; display: flex; justify-content: center;">
+                <span style="font-size:25px; font-weight: 600; color: black;">Silver Package</span>
+                <span style="font-size:50px; font-weight: 700; color: black; display: flex; justify-content: center;">
                     <span>&#8377;</span><span>50K</span>
                 </span>
                 <hr>
@@ -430,7 +430,7 @@
             <div class="text-center mx-3 py-4 packageCompo3"
                 style="background: linear-gradient(180deg, #ECC440, #FFFA8A, #DDAC17, #FFFF95); display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
                 <span style="font-size:25px; font-weight: 600;">Gold Package</span>
-                <span style="font-size:50px; font-weight: 700; color: #b9a11a; display: flex; justify-content: center;">
+                <span style="font-size:50px; font-weight: 700; color: black; display: flex; justify-content: center;">
                     <span>&#8377;</span><span>2 Lakh</span>
                 </span>
                 <hr>
@@ -604,7 +604,7 @@
             <div class="text-center mx-3 py-4 packageCompo4"
                 style="background: linear-gradient(180deg, #D9D8D6, #E5E4E2, #F1F0ED, #D9D8D6); display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
                 <span style="font-size:25px; font-weight: 600;">Platinum Package</span>
-                <span style="font-size:50px; font-weight: 700; color: #b9a11a; display: flex; justify-content: center;">
+                <span style="font-size:50px; font-weight: 700; color: black; display: flex; justify-content: center;">
                     <span>&#8377;</span><span>3 Lakh</span>
                 </span>
                 <hr>
