--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,8 +2,9 @@
 <app-spinner></app-spinner>
 }
 
-<div class="container-fluid pb-5 "
-    style="  background: linear-gradient(180deg,  #fceb8e, #f5e9a8, #f7efaf, #fceb8e);">
+
+
+<div class="container-fluid pb-5 " style="background: linear-gradient(180deg, #a18759, #e2d798, #ded6b9, #fffefd, #ded6b9, #e2d798, #a18759);">
 
     <div class="row">
         <div class="col-lg-6 col-md-7 col-12 contactInfo mx-auto py-3 my-3 px-5">
@@ -35,28 +36,28 @@
             <form [formGroup]="contactForm">
                 <div class="form-group">
                     <label for="name">Full Name <span class="text-danger">*</span></label>
-                    <input style="box-shadow: 2px 2px 4px #fceb8e;" formControlName="name" type="text">
+                    <input style="box-shadow: 2px 2px 4px #a18759;" formControlName="name" type="text">
                     @if(contactForm.get('name')?.invalid && contactForm.get('name')?.touched){
                     <span class="text-danger">Required</span>
                     }
                 </div>
                 <div class="form-group">
                     <label for="email">Email <span class="text-danger">*</span></label>
-                    <input style="box-shadow: 2px 2px 4px #fceb8e;" formControlName="email" type="email">
+                    <input style="box-shadow: 2px 2px 4px #a18759;" formControlName="email" type="email">
                     @if(contactForm.get('email')?.invalid && contactForm.get('email')?.touched){
-                        <span class="text-danger">Required</span>
-                       }
+                    <span class="text-danger">Required</span>
+                    }
                 </div>
                 <div class="form-group">
                     <label for="email">Number <span class="text-danger">*</span></label>
-                    <input style="box-shadow: 2px 2px 4px #fceb8e;" type="number" formControlName="number">
+                    <input style="box-shadow: 2px 2px 4px #a18759;" type="number" formControlName="number">
                     @if(contactForm.get('number')?.invalid && contactForm.get('number')?.touched){
-                        <span class="text-danger">Required</span>
-                       }
+                    <span class="text-danger">Required</span>
+                    }
                 </div>
                 <div class="form-group">
                     <label for="message">Comment or message</label>
-                    <textarea style="box-shadow: 2px 2px 4px #fceb8e;" formControlName="comment"></textarea>
+                    <textarea style="box-shadow: 2px 2px 4px #a18759;" formControlName="comment"></textarea>
                 </div>
                 <button type="submit" (click)="saveData()">Send Message</button>
             </form>
