--- a/src/app/components/packages/packages.component.html
+++ b/src/app/components/packages/packages.component.html
@@ -602,7 +602,7 @@
         <!-- Platinum -->
         <div class="col-lg-3 col-md-3 col-12 px-2 my-4">
             <div class="text-center mx-3 py-4 packageCompo4"
-                style="background: linear-gradient(180deg, #D9D8D6, #E5E4E2, #F1F0ED, #D9D8D6); display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
+                style="background: linear-gradient(180deg, #f7a35a, #fac99e, #ffffff,  #fac99e, #f7a35a); display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
                 <span style="font-size:25px; font-weight: 600;">Platinum Package</span>
                 <span style="font-size:50px; font-weight: 700; color: black; display: flex; justify-content: center;">
                     <span>&#8377;</span><span>3 Lakh</span>
